--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
       .co1{width:650px;height:500px;}h1{font-size:45px;}h2{text-align:centre;}
       .container2{width:1300px;height:250px;display:flex;padding:50px;background-color:lightgrey;}
       .t{border-radius:30px;color:white;background-color:blue;}
-      .container3{background-color:#502790;color:white;padding:50px 50px;height:300px;width:1300px;text-align:centre;align-content:centre;}
+      .container3{background-color:lightblue;color:white;padding:50px 50px;height:300px;width:1300px;text-align:centre;align-content:centre;}
       .tt{color:blue;background-color:white;border-radius:30px;padding:20px;border:white;}
       .container4{display:flex;width:1300px;gap:90px;padding:50px;}
       .container5{display:flex;gap:90px;padding:50px;}
-      .ut{border-radius:30px;color:lightblue;background-color:white;border:white;padding:10px;}
+      .ut{border-radius:30px;color:red;background-color:white;border:white;padding:10px;}
       .q{color:black;background-color:white;border-radius:30px;border:none;text-align:centre;}
       .q:hover{background-color:lightblue;color:white;justify}
       .c2{width:400px;height:400px;background-color:white;}
